Fix header and footer on Mobile view

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -76,7 +76,8 @@ body {
     body {
         width: 100%;
         height: 100%;
-        padding:0;
+        padding: 0;
+		position: absolute;
     }
 
     body #header {
@@ -85,7 +86,7 @@ body {
         background: #0f0f0f;
         font-family: Roboto, Helvetica, Arial, sans-serif;
         color: #ffffff;
-        position: absolute;
+        position: relative;
     }
 
     body #header a.home {
@@ -97,7 +98,7 @@ body {
     }
 
     body .inputs {
-        position: absolute;
+        position: relative;
         top: 50%;
         left: 50%;
         text-align: center;
